Added endpoints for creating and deleting comment
