# src/server/api/controllers/comments.controller.js
@@ -2,13 +2,31 @@
 
 const knex = require('../../config/db');
 
+const createComment = async ({
+  description,
+  fk_annotations_id,
+  fk_comments_id,
+  fk_user_id,
+}) => {
+  await knex('comments').insert({
+    description: description,
+    fk_annotations_id: fk_annotations_id,
+    fk_comments_id: fk_comments_id,
+    fk_user_id: fk_user_id,
+  });
+
+  return {
+    successful: true,
+  };
+};
+
 const getCommentsForAnnotation = (fk_annotations_id) => {
   return knex('comments')
     .where({ fk_annotations_id: fk_annotations_id })
     .select('*');
 };
 
-const updateComment = (comment_id, body) => {
+const updateCommentById = (comment_id, body) => {
   return knex('comments')
     .where({ comment_id: comment_id })
     .update({
@@ -17,7 +35,15 @@ const updateComment = (comment_id, body) => {
     });
 };
 
+const deleteCommentById = (comment_id) => {
+  return knex('comments')
+    .where({ comment_id: comment_id })
+    .del();
+};
+
 module.exports = {
+  createComment,
   getCommentsForAnnotation,
-  updateComment,
+  updateCommentById,
+  deleteCommentById,
 };
