# src/server/api/routes/comments.router.js
@@ -7,6 +7,21 @@ const router = express.Router({ mergeParams: true });
 // controllers
 const commentsController = require('../controllers/comments.controller');
 
+// ENDPOINT: /api/comments/ :POST to create new comment for an annotation
+router.post('/', (req, res) => {
+  commentsController
+    .createComment(req.body)
+    .then((result) => {
+      res.json(result);
+    })
+    .catch(() => {
+      res
+        .status(400)
+        .send('Bad request')
+        .end();
+    });
+});
+
 // ENDPOINT: /api/comments/annotation/:fk_annotation_id :GET to get all comments added to a specific annotation
 router.get('/annotation/:fk_annotations_id', (req, res, next) => {
   commentsController
@@ -15,10 +30,18 @@ router.get('/annotation/:fk_annotations_id', (req, res, next) => {
     .catch(next);
 });
 
-// ENDPOINT: /api/comments/:comment_id :PUT update comment for an annotation
+// ENDPOINT: /api/comments/:comment_id :PUT to update comment for an annotation
 router.put('/:comment_id', (req, res, next) => {
   commentsController
-    .updateComment(req.params.comment_id, req.body)
+    .updateCommentById(req.params.comment_id, req.body)
+    .then((result) => res.json({ success: result === 1 }))
+    .catch(next);
+});
+
+// ENDPOINT: /api/comments/:comment_id :DELETE to delete comment for an annotation
+router.delete('/:comment_id', (req, res, next) => {
+  commentsController
+    .deleteCommentById(req.params.comment_id)
     .then((result) => res.json({ success: result === 1 }))
     .catch(next);
 });
